Fix paths in docker compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,8 +9,8 @@ services:
     environment:
       - WATCHPACK_POLLING=true
     volumes:
-      - ./customer_config/config.json:/app/static/config.json
-      - ./customer_config/themes.json:/app/static/themes.json
+      - ./dev/customer_config/config.json:/app/static/config.json
+      - ./dev/customer_config/themes.json:/app/static/themes.json
       - ./app/js/Help.jsx:/app/js/Help.jsx
       - ./app/js/SearchProviders.js:/app/js/SearchProviders.js
       - ./app/index.html:/app/index.html
