Add a bit more info about nginx proxy

--- a/dev/nginx_proxy.conf
+++ b/dev/nginx_proxy.conf
@@ -1,4 +1,5 @@
-# This nginx config is used to enable SearchProviders
+# This nginx config is used for DEV purposes to allow testing SearchProviders.
+# It's preventing CORS issues by listening for requests to localhost:8888 and redirecting them to maps-test.thalwil.ch.
 
 user  nginx;
 worker_processes  auto;
