Activate docker image push and use updated qwc2_minimal (nightly) as image base

--- a/.github/workflows/docker-image-nightly.yml
+++ b/.github/workflows/docker-image-nightly.yml
@@ -24,6 +24,6 @@ jobs:
         with:
           context: ./
           # do not push for the moment, to avoid load
-          # push: true
+          push: true
           tags: ghcr.io/${{ github.repository }}:${{ github.head_ref }}-${{ github.sha }}
           target: prod
